--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,42 +1,33 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App {
+  display: flex;
+  flex-direction: column;
+  height: 100dvh;
+
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+  background-color: aliceblue;
+  flex-grow: 1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.main__inner {
+  max-width: 1080px;
+  width: 100%;
+  min-width: 380px;
+  margin: auto;
 }
 
-.card {
-  padding: 2em;
+.userForm {
+  display: flex;
+  flex-direction: column;
+  padding-inline: 1rem;
 }
 
-.read-the-docs {
-  color: #888;
+.userForm label[for="content"] {
+  display: block;
 }
