--- a/app/src/components/header/index.css
+++ b/app/src/components/header/index.css
@@ -10,10 +10,11 @@ header {
   justify-content: space-between;
 }
 
-.header__inner h1 {
+.header__inner h1 a {
   color: #fff;
   text-shadow: 1px 2px 3px #808080;
   padding-left: 1rem;
+  text-decoration: none;
 }
 
 .header__nav {
